regen button no longer visible during printing

--- a/index.css
+++ b/index.css
@@ -20,4 +20,7 @@ img{
     html {
         filter: invert(1);
     }
+    button {
+        display: none;
+    }
 }
